Add policy compilation pipeline and related configurations
- Introduced a new CLI command `compile-policy` to orchestrate the policy compilation pipeline, including tool annotation, constitution compilation, and scenario generation.
- Added `compiled-policy.json` and `tool-annotations.json` to store generated policy rules and tool capabilities.
- Enhanced `loadConfig` and `loadGeneratedPolicy` functions to support new configuration paths and types.
- Created detailed documentation for the policy compilation process, including design principles and validation steps.
- Updated existing files to integrate the new pipeline, ensuring compatibility with the overall architecture.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Secure agent runtime with trusted process mediation",
   "scripts": {
     "start": "tsx src/index.ts",
+    "compile-policy": "tsx src/pipeline/compile.ts",
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "eslint src/ test/"
