Add repair functionality to policy compilation and verification
- Introduced a `RepairContext` interface to facilitate multi-turn LLM interactions for repairing policy rules during compilation.
- Implemented `compilePolicyRulesWithRepair` to handle rule recompilation based on verification feedback, enhancing error handling and robustness.
- Updated `compileConstitution` to utilize a repair prompt when a `RepairContext` is provided, improving the accuracy of generated rules.
- Enhanced the `buildRepairPrompt` function to include previous rules, failed scenarios, and judge analysis for better guidance during repairs.
- Refactored tests to validate the new repair functionality, ensuring comprehensive coverage of the compilation and verification processes.
- Added new tests for the `buildRepairPrompt` function to confirm the inclusion of necessary information in repair instructions.
- Updated existing tests to accommodate changes in the pipeline components related to repair functionality.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "description": "Secure agent runtime with trusted process mediation",
   "scripts": {
+    "build": "tsc",
     "start": "tsx src/index.ts",
     "compile-policy": "tsx src/pipeline/compile.ts",
     "test": "vitest run",
