Enhance multi-provider model support and configuration management
- Added support for Google and OpenAI models by introducing new dependencies and updating the configuration schema to include API keys for these providers.
- Implemented a dynamic model resolution system that allows users to specify models using a "provider:model-id" format, enhancing flexibility and usability.
- Updated user configuration management to validate and handle multiple provider API keys, ensuring seamless integration with existing configurations.
- Refactored the agent session and pipeline components to utilize the new model resolution logic, improving overall architecture and maintainability.
- Added comprehensive tests to validate the new functionality and ensure robust error handling for unknown providers and model IDs.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^3.0.44",
+    "@ai-sdk/google": "^3.0.30",
+    "@ai-sdk/openai": "^3.0.30",
     "@modelcontextprotocol/sdk": "^1.26.0",
     "@utcp/code-mode": "^1.2.11",
     "@utcp/mcp": "^1.1.1",
