--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@cyanheads/git-mcp-server": "^2.8.4",
     "@eslint/js": "^9.39.2",
     "@types/node": "^22.0.0",
     "@types/uuid": "^10.0.0",
