Add tool annotation functionality and update documentation
- Introduced a new script `annotate-tools` in `package.json` to classify MCP tool arguments using LLM, enhancing the tool annotation process.
- Created `annotate.ts` to connect to MCP servers, classify tool arguments, and generate `tool-annotations.json`.
- Updated `README.md` to reflect the new annotation step in the policy compilation pipeline, clarifying the sequence of tasks for users.
- Refactored `pipeline-shared.ts` to consolidate shared utilities for both annotation and compilation processes, reducing code duplication.
- Enhanced argument role definitions to support server-specific roles, improving the accuracy of tool annotations.
- Added tests for the new annotation functionality to ensure correctness and prevent regressions.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "tsx src/index.ts",
+    "annotate-tools": "tsx src/pipeline/annotate.ts",
     "compile-policy": "tsx src/pipeline/compile.ts",
     "test": "vitest run",
     "test:watch": "vitest",
