chore: update dependencies and enhance CLI functionality
- Added `shell-quote` as a dependency for improved command handling.
- Introduced `@types/shell-quote` for TypeScript support.
- Updated `copy-assets.mjs` to ensure the CLI entry point is executable post-build.
- Enhanced `loadConfig` function to resolve node_modules paths, accommodating npm's dependency hoisting.
- Refactored `sandbox-integration.ts` to resolve binary paths correctly, improving compatibility with various project structures.

--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
     "marked": "^15.0.12",
     "marked-terminal": "^7.3.0",
     "ora": "^9.3.0",
+    "@cyanheads/git-mcp-server": "^2.8.4",
+    "shell-quote": "^1.8.3",
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@cyanheads/git-mcp-server": "^2.8.4",
     "@eslint/js": "^9.39.2",
     "@types/node": "^22.0.0",
+    "@types/shell-quote": "^1.7.5",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.39.2",
     "tsx": "^4.19.0",
