chore: update LICENSE and package.json for project details
- Updated the copyright year and owner in the LICENSE file to 2026, reflecting the current ownership.
- Added license type and author information in package.json for clarity on project usage and attribution.
- Expanded the files section in package.json to include specific configuration files, ensuring they are part of the distribution.

--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "type": "module",
   "description": "Secure agent runtime with trusted process mediation",
+  "license": "Apache-2.0",
+  "author": "Niels Provos",
   "bin": {
     "ironcurtain": "dist/cli.js"
   },
   "main": "dist/index.js",
   "files": [
     "dist/",
-    "src/config/",
+    "src/config/constitution.md",
+    "src/config/mcp-servers.json",
+    "src/config/generated/compiled-policy.json",
+    "src/config/generated/tool-annotations.json",
+    "src/config/generated/test-scenarios.json",
     "README.md",
     "LICENSE"
   ],
