chore: rename package to scoped name
- Updated the package name in package.json from "ironcurtain" to "@provos/ironcurtain" to reflect the new scoped naming convention.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ironcurtain",
+  "name": "@provos/ironcurtain",
   "version": "0.1.0",
   "type": "module",
   "description": "Secure agent runtime with trusted process mediation",
