chore: add Code of Conduct and update project metadata
- Introduced a new CODE_OF_CONDUCT.md file to establish community standards and expectations for behavior.
- Updated package.json to include a public publish configuration.
- Enhanced README.md with additional badges for CI status, npm version, license, and website link.
- Modified CI workflow to include concurrency settings for better management of pull request builds.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "type": "module",
   "description": "Secure agent runtime with trusted process mediation",
   "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Niels Provos",
   "repository": {
     "type": "git",
