--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "start": "tsx src/cli.ts start",
     "annotate-tools": "tsx src/cli.ts annotate-tools",
     "compile-policy": "tsx src/cli.ts compile-policy",
+    "config": "tsx src/cli.ts config",
     "prepublishOnly": "npm run build",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -59,6 +60,7 @@
     "@ai-sdk/google": "^3.0.30",
     "@ai-sdk/openai": "^3.0.30",
     "@anthropic-ai/sandbox-runtime": "^0.0.37",
+    "@clack/prompts": "^1.0.1",
     "@cyanheads/git-mcp-server": "^2.8.4",
     "@modelcontextprotocol/sdk": "^1.26.0",
     "@utcp/code-mode": "^1.2.11",
