--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "eslint src/ test/",
-    "format": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
+    "format": "prettier --log-level=warn --write 'src/**/*.ts' 'test/**/*.ts'",
     "format:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'"
   },
   "dependencies": {
