chore: remove agent-memory

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ Thumbs.db
 *.swo
 *~
 
+# Claude Code agent memory (per-user, auto-generated)
+.claude/agent-memory/
+
 # IronCurtain runtime
 .ironcurtain/
 
