--- a/package.json
+++ b/package.json
@@ -63,12 +63,14 @@
     "@clack/prompts": "^1.0.1",
     "@cyanheads/git-mcp-server": "^2.8.4",
     "@modelcontextprotocol/sdk": "^1.26.0",
+    "@mozilla/readability": "^0.6.0",
     "@utcp/code-mode": "^1.2.11",
     "@utcp/mcp": "^1.1.1",
     "ai": "^6.0.86",
     "chalk": "^5.6.2",
     "cli-highlight": "^2.1.11",
     "dotenv": "^17.3.1",
+    "jsdom": "^28.1.0",
     "marked": "^15.0.12",
     "marked-terminal": "^7.3.0",
     "ora": "^9.3.0",
@@ -82,6 +84,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^25.3.0",
     "@types/shell-quote": "^1.7.5",
     "@types/turndown": "^5.0.6",
