feat: first-start wizard for new installations
Runs an interactive onboarding wizard when ~/.ironcurtain/config.json
does not exist. Explains the security model, shows the default
constitution, validates API keys, and points to customization options.
Skipped silently in non-TTY environments. Also adds `ironcurtain setup`
subcommand to re-run the wizard at any time.

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "annotate-tools": "tsx src/cli.ts annotate-tools",
     "compile-policy": "tsx src/cli.ts compile-policy",
     "config": "tsx src/cli.ts config",
+    "setup": "tsx src/cli.ts setup",
     "prepublishOnly": "npm run build",
     "test": "vitest run",
     "test:watch": "vitest",
