--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "jsdom": "^28.1.0",
     "marked": "^15.0.12",
     "marked-terminal": "^7.3.0",
+    "node-forge": "^1.3.3",
     "ora": "^9.3.0",
     "shell-quote": "^1.8.3",
     "turndown": "^7.2.2",
@@ -89,6 +90,7 @@
     "@eslint/js": "^10.0.1",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^25.3.0",
+    "@types/node-forge": "^1.3.14",
     "@types/shell-quote": "^1.7.5",
     "@types/turndown": "^5.0.6",
     "eslint": "^10.0.1",
