feat: add bot command and update documentation for Signal messaging transport
- Added a new npm script command "bot" to package.json for starting the Signal bot daemon.
- Updated README.md to include details about the Signal messaging transport, setup instructions, and bot commands.
- Introduced TRANSPORT.md for comprehensive documentation on the Signal messaging transport, including setup, commands, and architecture.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "annotate-tools": "tsx src/cli.ts annotate-tools",
     "compile-policy": "tsx src/cli.ts compile-policy",
     "customize-policy": "tsx src/cli.ts customize-policy",
+    "bot": "tsx src/cli.ts bot",
     "config": "tsx src/cli.ts config",
     "setup": "tsx src/cli.ts setup",
     "prepublishOnly": "npm run build",
