docs: update CONTRIBUTING and TESTING documentation to include pre-commit hook setup
- Added instructions for installing the pre-commit hook that runs `format:check` and `lint` before commits.
- Updated the `package.json` to include a new script for setting up the pre-commit hook.
- Introduced a new pre-commit hook script to enforce code quality checks before commits.

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "test:watch": "vitest",
     "lint": "eslint src/ test/",
     "format": "prettier --log-level=warn --write 'src/**/*.ts' 'test/**/*.ts'",
-    "format:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'"
+    "format:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
+    "setup-hooks": "cp .hooks/pre-commit .git/hooks/pre-commit && chmod +x .git/hooks/pre-commit && echo 'Pre-commit hook installed.'"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^3.0.44",
